--- a/Population_Search/population_app/templates/home.html
+++ b/Population_Search/population_app/templates/home.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %} {% block title %} {% endblock %} {% block content %}
 <h1>Welcome to Dashboard</h1>
 {% for k in total_population %} Country: {{k.city__state__country__name}}<br />total_population:{{k.total_population}}<br />
-{% endfor %} {% endblock %}
+
+{% endfor %} 
+<a href={% url 'population_app:pie_chart' %}>Pie chart</a></h1>
+{% endblock %}
